--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <a href="#project" style="--i:4">Project</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
+
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
     <section class="home" id="home">
         <div class="home-img">
@@ -30,9 +34,8 @@
             <h3>哈囉, 我是</h3>
             <h1>王翊鑫!</h1>
             <h3>我現在是 <span class="text"></span></h3>
-            <p>我正在學習軟體開發，與程式設計。<br>
-                熱愛學習新技術，致力於成為優秀的軟體工程師。
-            </p>
+            <p>我正在學習軟體開發，與程式設計。</p>
+            <p>熱愛學習新技術，致力於成為優秀的軟體工程師。</p>
             <div class="home-sci">
                 <a href="https://www.facebook.com/eason.wang.0201/" style="--i:6" target="_blank" rel="noopener noreferrer">
                     <i class='bx bxl-facebook'></i>
@@ -159,7 +162,7 @@
     <section>
         <div class="portfolio" id="project">
             <div class="main-text" id="project">
-                <h2>Latest<span>Project</span></h2>
+                <h2>Latest <span>Project</span></h2>
 
                 <div class="portfolio-content">
                     <div class="row">
