--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                 我充滿好奇心，也樂於學習新技術，目前也持續接觸不同領域的東西，
                 我希望未來能成為一名優秀的軟體工程師，透過技術解決真實世界的問題。
             </p>
-
-            <a href="resources/Eason_Resume.pdf" class="btn-box" target="_blank">View My Resume</a>        </div>
+            <div>
+                <a href="#contact" class="btn-box">Contact Me</a>
+            </div>
+        </div>
     </section>
 
     <section id="skills">
@@ -184,7 +186,7 @@
                         <div class="layer">
                             <h5>Meow Agent</h5>
                             <p>
-                                利用 processing java 所撰寫出的遊戲。 這是一款結合射擊與學科教育的趣味小遊戲！玩家將扮演貓咪特工，一邊與敵人戰鬥，一邊完成隨機生成的學科題目。答對題目即可獲得技能強化，讓角色變得更強！
+                                利用 processing java 撰寫出的遊戲，一款結合射擊與學科教育的趣味小遊戲！應用物件導向設計（OOP），提升程式的結構與可讀性。
                             </p> 
                             <div class="repo-icons">
                             <a href="https://github.com/Eason20050201/Meow-Agent" target="_blank">
