Portfolio v1.1 adjust logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="home" class="logo">Portfolio.</a>
+        <p class="logo">Portfolio.</p>
 
         <nav class="navbar">
             <a href="#home" style="--i:1"class="active" >Home</a>
